# cmd/api/api/instances.go
@@ -1156,6 +1156,10 @@ func instanceToOAPI(inst instances.Instance) oapi.Instance {
 		oapiInst.Platform = lo.ToPtr(inst.Platform)
 	}
 
+	if inst.ForkMode != "" {
+		oapiInst.ForkMode = lo.ToPtr(oapi.InstanceForkMode(inst.ForkMode))
+	}
+
 	if inst.ExitMessage != "" {
 		oapiInst.ExitMessage = lo.ToPtr(inst.ExitMessage)
 	}
